Fixed the hover effect on the books article (2 or 3 pixel too short on the top).
The top margin is already on the cover so there is no need to add it also in the
book title.

--- a/templates/default/styles/style-base.css
+++ b/templates/default/styles/style-base.css
@@ -226,7 +226,7 @@ max-width:800px;
 }
 
 .books .fancydetail .fullclickpopup {
-    margin: 4px 0px 4px 75px;
+    margin: 0px 0px 4px 75px;
 }
 
 .bookpopup .cover {
